doc: Update documentation for Java 21